force-app/main/default/objects/Discount_Setting__mdt/fields/Class_to_Instantiate__c.field-meta.xml
<CustomField>
    <fullName>Class_to_Instantiate__c</fullName>
    <description>Apex Class implementation to be used for this discount setting</description>
    <inlineHelpText>Apex Class implementation to be used for this discount setting</inlineHelpText>
    <label>Class to Instantiate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>