force-app/main/default/objects/Discount_Setting__mdt/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Discount percentage</description>
    <inlineHelpText>Discount percentage</inlineHelpText>
    <label>Discount</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>