force-app/main/default/objects/Discount_Setting__mdt/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>